--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,12 @@
 		</div>
 		<div id="user_nav">
 			<% if current_user %>
-				Logged in as <%= current_user.email %>
+				Logged in as <%= current_user.email %> |
 				<%= link_to "Sign Out", log_out_path %>
 			<% else %>
-				<%= link_to "Sign UP", sign_up_path %> or 
+				<%= link_to "Sign UP", sign_up_path %> |
 				<%= link_to "Log In", log_in_path %>
-			<% end %>
 		</div>
-
-		<% flash.each do |name, msg| %>
-			<%= content_tag :div, msg, :id => "flash_#{name}"	%>
 		<% end %>
 <%= yield %>
 
