--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,11 @@
 <h1> Sign Up </h1>
 
 <%= form_for(@user) do |f| %>
+
+	<p>
+			<%= f.label :name %><br>
+			<%= f.text_field :name %>
+	</p>
 	<p>
 			<%= f.label :email %><br>
 			<%= f.text_field :email %>
