--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,24 @@
 <h1> <%= @user.name %> </h1>
-<h3> <%= @user.email %> </h3>
+<h3> <%= @user.email %> </h3><br>
+
+
+<div>
+		<% @user.contacts.each do |contact| %>
+			<tr>	
+				<td> <%= contact.name %> </td>
+				<td>									   </td>
+				<td>  <%= contact.email %> </td>
+				<td>									  </td>
+				<td> <%= contact.telephone %> </td>
+				<td>									   </td>
+        <td><%= link_to('Edit', edit_user_contact_path(:user, @contact)) %></td>
+        		<form action="<%= contact_path(:user, @contact) %>" method="POST">
+        			<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+        			<input type="hidden" name="_method" value="delete" />
+        			<button>Delete</button>
+        		</form>
+        </td>
+			</tr>
+		<%end%>	
+<% link_to 'Back', users_path %>
+	</div>
