--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -7,5 +7,5 @@
 	</p>
 <% end %>
 
-<%= link_to 'Back', users_path(@user) %> |
-<%= link_to 'New Contact', new_user_contact_path(params[:user_id]) %>
+<%= link_to 'Back', user_path(@user_id) %> |
+<%= link_to 'New Contact', new_user_contact_path(@user_id) %>
