--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
 				<td>									  </td>
 				<td> <%= contact.telephone %> </td>
 				<td>									   </td>
-        <td><%= link_to('Edit', edit_user_contact_path(:user, @contact)) %></td>
-        		<form action="<%= contact_path(:user, @contact) %>" method="POST">
+        <td><%= link_to 'Edit', edit_user_contact_path(@user, contact) %></td>
+        		<form action="<%= user_contact_path(@user, contact) %>" method="POST">
         			<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
         			<input type="hidden" name="_method" value="delete" />
         			<button>Delete</button>
@@ -20,5 +20,11 @@
         </td>
 			</tr>
 		<%end%>	
-<% link_to 'Back', users_path %>
+<%= link_to 'Back', users_path %>
+<%= link_to 'New Contact', new_user_contact_path(@user) %>
 	</div>
+
+
+
+
+
