--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  
+  <script type='text/javascripts' src="jquery.js"></script>
+  <script type='text/javascripts' src="backbone.js"></script>
+  <script type='text/javascripts' src="underscore.js"></script>
 </head>
 <body>
 		<div class="navbar">
