--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -8,4 +8,5 @@
 <% end %>
 
 <%= link_to 'Back', user_path(@user_id) %> |
-<%= link_to 'New Contact', new_user_contact_path(@user_id) %>
+
+<button id="newContact">New Contact<%= new_user_contact_path(@user_id)%></button>
