--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<div id="dialog" title="Edit">
 <%= form_for (@user) do |f| %>
 	<div class="field">
 		<%= f.label :name %><br>
@@ -11,3 +12,5 @@
 		<%=f.submit %>
 	</div>
 <% end %>
+</div>
+ 
