--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 			<nav>
 			<% if current_user %>
 				Logged in as <%= current_user.email %> |
+				<%= link_to 'Home', users_path %> |
 				<%= link_to "Sign Out", log_out_path %>
 			<% else %>
 				<%= link_to "Sign UP", sign_up_path %> |
@@ -22,6 +23,5 @@
 		</div>
 		<% end %>
 <%= yield %>
-
 </body>
 </html>
