--- a/app/views/user_mailer/sign_up_email.html.erb
+++ b/app/views/user_mailer/sign_up_email.html.erb
@@ -1,4 +1,11 @@
+<!DOCTYPE <html>
+<head>
+	<title></title>
+</head>
+<body>
 <h1> Greetings, <%= @user.name %>! </h1>
 
 <p> Thank you for signing up with <%= @user.email %>. </p>
 
+</body>
+</html>
